# tvhs

./: LICENSE  README.md  stack.yaml  tvhs.cabal
app/: Main.hs
src/: Transitions.hs
src/TrueValue/: Goal.hs  League.hs  Match.hs  MatchReader.hs  Outcome.hs  Teams.hs  Transitions.hs
