name:                tvhs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tvhs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TrueValue.Transitions, TrueValue.Match, TrueValue.Outcome,
                       TrueValue.Goal, TrueValue.Teams, TrueValue.League,
                       TrueValue.MatchReader
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , parsec
                     , parsec-numbers
                     , MissingH
                     , containers
  default-language:    Haskell2010

executable tvhs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tvhs
  default-language:    Haskell2010

test-suite tvhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tvhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tvhs
